# xml-editor

./: .gitignore  =1.59.0  ARCHITECTURE.md  CHANGELOG.md  CI_CD.md  CLOUDFLARE_WORKER_SETUP.md  DELIVERABLES.md  FEATURES.md  IMPLEMENTATION_MULTIPLAYER.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  MONACO_EDITOR_SCREENSHOT.md  MULTIPLAYER.md  NIX.md  NIX_IMPLEMENTATION.md  PRODUCTION_XQUERY_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCREENSHOTS.md  TABS_FEATURE.md  THEME_IMPLEMENTATION.md  THEME_REFERENCE.md  UI_LAYOUT.md  USER_GUIDE.md  XQUERY_IMPLEMENTATION.md  XQUERY_XML_OUTPUT.md  build_package.py  default.nix  flake.nix  generate_screenshots.py  pyproject.toml  pytest.ini  quick_screenshot.py  requirements.txt  setup.py  shell.nix  take_screenshots.py  (+22 more)
.github/workflows/: ci.yml  copilot-setup-steps.yml  deploy-cloudflare-worker.yml  release.yml
cloudflare-worker/: README.md  package.json  wrangler.toml
cloudflare-worker/src/: index.js
samples/: README.md  books.xml  books.xsd  books_to_html.xsl  employees.xml  example.xq  library.xml  library.xsd  products.xml  staffinfo.xml
tests/: README.md  __init__.py  run_tests.py  test_issue_demo.py  test_xquery_preprocessing.py  test_xquery_resources.py
tests/integration/: __init__.py  test_console_output.py  test_monaco_editor_gui.py  test_monaco_imports.py  (+2 more)
xmleditor/: __init__.py  ai_agent_tools.py  ai_assistant.py  ai_settings_dialog.py  cli.py  collaboration_dialog.py  main.py  main_window.py  monaco_editor.py  schema_generation_dialog.py  theme_manager.py  validation_dialog.py  xml_editor.py  xml_graph_view.py  xml_tree_view.py  xml_utils.py  xpath_dialog.py  xquery_engine.py  xquery_panel.py  xslt_dialog.py
(+17 files in other folders)
